gitops/apps/base/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ui
  namespace: pihole
spec:
  ingressClassName: tailscale
  rules:
  - host: pihole
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-service
            port:
              number: 80
